--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width:375px) {
+  #main{
+  width: 70%!important;
+  min-height:80%;
+}
+}
 body{
   width: 100vw;
   height: 100vh;
@@ -26,7 +32,7 @@ body{
   position: absolute;
   margin: auto;
   width: 35%;
-  height:78%;
+  min-height:70%;
   border-radius: 5px;
   background-color: white;
   display: flex;
@@ -55,7 +61,7 @@ body{
    justify-content: space-around;
 }
 #main .accordion .title{
-  font-size: 24px;
+  font-size: 16px;
   font-weight: bold;
   width: 100%;
   display: flex;
